added some new stuff

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Stay Ugly | A blog about privacy, techonology and some other stuffs</title>
     
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <link rel="shortcut icon" href="src/favicon.ico" />
   </head>
   <body>
   
