--- a/sites.html
+++ b/sites.html
@@ -2,9 +2,11 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Stay Ugly | A blog about privacy, techonology and some other stuffs</title>
+    <title>List of sites and resources |Stay Ugly | A blog about privacy, techonology and some other stuffs</title>
     
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <link rel="shortcut icon" href="src/favicon.ico" />
+
   </head>
   <body>
   
