--- a/translate.html
+++ b/translate.html
@@ -2,9 +2,10 @@
 <html lang="en-US">
   <head>
     <meta charset="utf-8">
-    <title>Stay Ugly | A blog about privacy, techonology and some other stuffs</title>
-    
+    <title>Help to translate the site! | Ugly | A blog about privacy, techonology and some other stuffs</title>
     <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <link rel="shortcut icon" href="src/favicon.ico" />
+
   </head>
   <body>
   
